# docs/swagger.json
@@ -821,6 +821,15 @@
                         "name": "token",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Password",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.ResetPasswordPayload"
+                        }
                     }
                 ],
                 "responses": {
@@ -1012,6 +1021,14 @@
             "type": "object",
             "properties": {
                 "reason": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.ResetPasswordPayload": {
+            "type": "object",
+            "properties": {
+                "password": {
                     "type": "string"
                 }
             }
